# ChangeLog
All notable changes to this project will be documented in this file.
Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.


## [ 2.0 ] - 2021-12-19 #############################################

### Added / Adicionado
 - Files and Sources:
    - Added RELEASE file.
    - Added mp3 files in sound folder.
 - Code:
    - Added application name.
    - Added notifications sound to new messages.
    - Added options for notifications in settings.
    - Added dark mode options for use in others webapps.
###

### Changed / Modificado
 - Files and Sources:
    - Rename whats.py to main.py in src.
 - Code:
    - Refactory code.
    - Modify About.
    - Created 'prevent' function for prevent outdated browser.
    - Importation of modules optimized.
    - Using variable for user agent.
    - Apply settings emiting signals.
 - Changed creation settings.json file.
###

### Removed / Removido
 - Files and Sources:
    - Removed 'warning.py'.
 - Code:
    - Removed function for user agent.
###

### Fixed / Corrigido
 - Fixed error:
-----------------------------------------------------------------
    Traceback (most recent call last):
      File "/usr/share/whats/whats.py", line 267, in eventFilter
        if obj.parent() == self:
    TypeError: parent(self, QModelIndex): not enough arguments
-----------------------------------------------------------------
 - Code:
    - Fixed option for open in system tray.
    - Fixed auto reload.
    - Fixed settings for trayicon.
    - Prevent open minimized when show window.
###

#####################################################################


## [ 1.3 ] - 2021-11-06 #############################################

### Added / Adicionado
 - Added funcionality for window transparency.
 - Added settings for size font.
 - Enabled settings for enable javascript, plugins and
   autoload images.
###

### Changed / Modificado
 - Modify Opacity to int in settings.json.
###

### Fixed / Corrigido